--- a/project1/project1.csproj
+++ b/project1/project1.csproj
@@ -174,6 +174,7 @@
     <Content Include="Views\Shift\Index.cshtml" />
     <Content Include="Views\Shift\Add.cshtml" />
     <Content Include="Views\Shift\AddShiftToEmployee.cshtml" />
+    <Content Include="Project1DB.bak" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
